# libbeam

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  libbeam  package.xml
beam_calibration/: CMakeLists.txt  README.md
beam_calibration/calibrater_data/: LC_calibrater_config.json
beam_calibration/include/beam_calibration/: CameraModel.h  CameraModels.h  Cataditropic.h  ConvertCameraModel.h  DistortionModel.h  DoubleSphere.h  EquidistantCamera.h  EquidistantDistortion.h  FisheyeCamera.h  Intrinsics.h  KannalaBrandt.h  Ladybug.h  LadybugCamera.h  LadybugDistortion.h  Pinhole.h  PinholeCamera.h  RadTanDistortion.h  Radtan.h  RadtanCamera.h  TfTree.h
beam_calibration/src/: Calibrate.py  Calibrator.cpp  CameraModel.cpp  Cataditropic.cpp  ConvertCameraModel.cpp  DistortionModel.cpp  DoubleSphere.cpp  EquidistantCamera.cpp  EquidistantDistortion.cpp  FisheyeCamera.cpp  Intrinsics.cpp  KannalaBrandt.cpp  LC_calibrater.cpp  Ladybug.cpp  LadybugCamera.cpp  LadybugDistortion.cpp  Ladybug_main.cpp  Pinhole.cpp  PinholeCamera.cpp  RadTanDistortion.cpp  Radtan.cpp  RadtanCamera.cpp  TFTree.cpp  TfTree.cpp  _debug.cpp  calibrater.cpp  debug.cpp  main.cpp
beam_calibration/src/Refactor/: CameraFactory.cpp  CameraModel.cpp  DoubleSphere.cpp  EquidistantDistortion.cpp  KannalaBrandt.cpp  Ladybug.cpp  LadybugCamera.cpp  PinholeCamera.cpp  Radtan.cpp  RadtanDistortion.cpp
beam_calibration/tests/: Camera_test.cpp  TfTree_test.cpp  cataditropic_tests.cpp  convert_camera_models_tests.cpp  double_sphere_tests.cpp  kannala_brandt_tests.cpp  ladybug_tests.cpp  pinhole_test.cpp  radtan_tests.cpp  run_all_tests.bash
beam_calibration/tests/test_data/: Cataditropic_test.json  DS_test.json  F1.json  F2.json  F2_v2.json  KB_test.json  Radtan_test.json  calibrater_config.json  camera_model_conversion_test_intrinsics.json  camera_model_conversion_test_intrinsics_distorted.json  camera_model_conversion_test_intrinsics_kb.json  camera_model_conversion_test_intrinsics_ladybug.json  extrinsics.json  extrinsics_full.json  ladybug.conf  safe_projection_test_calib.json  test.json
beam_colorize/: CMakeLists.txt
beam_colorize/src/: Colorizer.cpp  Projection.cpp  ProjectionOcclusionSafe.cpp  RayTrace.cpp  RayTraceGpu.cpp  colorizer_demo.cpp  debug.cpp  example.cpp
beam_colorize/tests/: colorize_test.cpp  projection_occlusion_safe_test.cpp  run_all_tests.bash
beam_colorize/tests/test_data/: F1.json  (+2 more)
beam_containers/: CMakeLists.txt
beam_containers/src/: LandmarkContainer.cpp  includes.cpp
beam_containers/tests/: image_container_tests.cpp  landmark_container_tests.cpp  point_container_tests.cpp  run_all_tests.bash
beam_cv/: CMakeLists.txt  README.md
beam_cv/src/: DepthCompletion.cpp  DepthMap.cpp  DepthSuperpixels.cpp  ImageDatabase.cpp  LinearRegression.cpp  Morphology.cpp  OpenCVConversions.cpp  RayCast.cpp  Raycast.cpp  Tracker.cpp  UF.cpp  Utils.cpp  crack_debug.cpp  debug.cpp  image_db_main.cpp  kitti_debug.cpp  skeleton.cpp
beam_cv/tests/: debug.cpp  depthmap_test.cpp  feature_tests.cpp  geometry_tests.cpp  kitti.cpp  p3p_test.cpp  pose_refinement_tests.cpp  run_all_tests.bash  superpoint_tests.cpp  tracker_tests.cpp  utils_test.cpp
beam_defects/: .travis.yml  CMakeLists.txt
beam_defects/scripts/: install.bash
beam_defects/src/: Corrosion.cpp  Crack.cpp  Defect.cpp  Delam.cpp  Spall.cpp  defect_functions.cpp  extract_functions.cpp  main.cpp
beam_defects/test_data/: cloud_cluster_0.pcd
beam_defects/tests/: get_corrosion_test.cpp  get_crack_test.cpp  get_delam_test.cpp  get_spall_test.cpp  run_all_tests.bash
beam_depth/: CMakeLists.txt  README.md
beam_depth/src/: DepthCompletion.cpp  DepthMap.cpp  Utils.cpp
beam_depth/tests/: depth_map_test.cpp  kitti.cpp  run_all_tests.bash  utils_test.cpp
beam_filtering/: CMakeLists.txt  README.md
beam_filtering/src/: CropBox.cpp  DROR.cpp  Filter.cpp  ROR.cpp  Utils.cpp  VoxelDownsample.cpp
beam_filtering/tests/: CropBoxTest.cpp  DRORTest.cpp  UtilsTests.cpp  VoxelDownsampleTest.cpp  run_all_tests.bash
beam_mapping/: CMakeLists.txt  README.md
beam_mapping/src/: MapBuilder.cpp  Poses.cpp  Utils.cpp  build_map.cpp  main.cpp
beam_mapping/tests/: MapBuilderTest.cpp  PosesTest.cpp  run_all_tests.bash
beam_matching/: CMakeLists.txt
beam_matching/config/: icp.json  loam.json  teaserpp.json
beam_matching/src/: GicpMatcher.cpp  IcpMatcher.cpp  LoamMatcher.cpp  LoamPointCloud.cpp  NdtMatcher.cpp  Scancontext.cpp  TeaserPPMatcher.cpp  gicp.cpp  ground_segmentation.cpp  icp_pcl_functions.cpp  pointcloud_display.cpp
beam_matching/tests/: gicp_tests.cpp  ground_segmentation_test.cpp  icp_gtests.cpp  icp_tests.cpp  loam_gtests.cpp  loam_tests.cpp  multi_matcher_tests.cpp  ndt_tests.cpp  pointcloud_display_tests.cpp  run_all_tests.bash  teaserpp_gtests.cpp  teaserpp_tests.cpp
beam_optimization/: CMakeLists.txt
beam_optimization/config/: CamFactorIntrinsics.json  CeresParamsDefault.json
beam_optimization/tests/: ladybug_reprojection_tests.cpp  point_to_line_tests.cpp  point_to_plane_tests.cpp  pose_prior_tests.cpp  radtan_reprojection_tests.cpp  run_all_tests.bash  util.cpp  visualizer.cpp
beam_utils/: CMakeLists.txt
beam_utils/src/: angles.cpp  bspline.cpp  config.cpp  filesystem.cpp  gflags.cpp  math.cpp  optional.cpp  pointclouds.cpp  polynomial.cpp  roots.cpp  se3.cpp  simple_path_generator.cpp  time.cpp  uf.cpp  visualizer.cpp
beam_utils/tests/: CMakeLists.txt  angles_test.cpp  bspline_test.cpp  filesystem_test.cpp  math_test.cpp  run_all_tests.bash  time_test.cpp
wave_spatial_utils/: CMakeLists.txt  README.md  package.xml
wave_spatial_utils/example/: example_world_frame_publisher.cpp  example_world_frame_publisher2.cpp
wave_spatial_utils/src/: angles.cpp  pose_cov_comp.cpp  world_frame_conversions.cpp
wave_spatial_utils/test/: test_angles.cpp  test_ecef_enu_transforms.cpp  test_ecef_llh_point_conversions.cpp  test_enu_llh_point_conversions.cpp  test_pose_cov_comp.cpp  test_ros_fix_point_conversions.cpp  test_ros_tf2_helpers.cpp  test_ros_tf_helpers.cpp  test_wave_spatial_utils.cpp
(+798 files in other folders)
