PROJECT(beam_colorize)

BEAM_ADD_MODULE(${PROJECT_NAME}
  DEPENDS
    catkin::catkin
    PCL::PCL
    beam::calibration
    beam::containers
    beam::cv
    OpenCV::OpenCV
  SOURCES
    src/Colorizer.cpp
    src/Projection.cpp
    src/RayTrace.cpp
)
################ tests ##################
add_executable(${PROJECT_NAME}_tests
  tests/colorize_test.cpp
)
target_include_directories(${PROJECT_NAME}_tests
  PUBLIC
    include
)
target_link_libraries(${PROJECT_NAME}_tests
  ${PROJECT_NAME}
  Catch2::Catch2
  nlohmann_json::nlohmann_json
  Boost::boost
)
############# Debug files #############
add_executable(${PROJECT_NAME}_demo
  src/colorizer_demo.cpp
)
target_include_directories(${PROJECT_NAME}_demo
  PUBLIC
    include
    ${OpenCV_INCLUDE_DIRS}
)
target_link_libraries(${PROJECT_NAME}_demo
  ${PROJECT_NAME}
  ${catkin_LIBRARIES}
  ${OpenCV_LIBS}
)
#######################################
